--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -102,7 +102,7 @@
       <div id="constants-container">
       <ul>
         <li class="righted">
-          <select class="righted"name="streams" id="streams" style="display: none;"></select><br>
+          <select class="righted"name="streams" id="streams" ></select><br>
       </li>
       <li class="righted">
         Type of Election:<select class="righted"name="territories" id="territories"></select><br>
@@ -141,15 +141,10 @@
           Date of election:
           <input
           class="righted"
-          type="text"
+          type="date"
           id="electiondate"
           name="electiondate"
-          maxlength="10"
-          size="11"
-          pattern="^(0[1-9]|[12][0-9]|3[01])-(0[1-9]|1[0-2])-\d{4}$"
-          title="Enter date as DD-MM-YYYY, e.g. 21-08-2025"
-          placeholder="DD-MM-YYYY"
-        />
+          />
       </li>
       </ul>
 </div>
@@ -638,11 +633,30 @@ fetch("/get-constants", { credentials: 'same-origin' })
       return;
     }
 
+    const election = activeTab.dataset.election;
 
-
-  const election = activeTab.dataset.election;
-
-  });
+    fetch("/update-territory", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      credentials: "same-origin",
+      body: JSON.stringify({ election: election })
+    })
+      .then(res => res.json())
+      .then(resp => {
+        if (resp.success) {
+          fetch("/get-constants", { credentials: 'same-origin' })
+            .then(res => res.json())
+            .then(data => {
+              updateConstantsUI(data.constants, data.options);
+                const mapfile = data.constants?.territory
+              if (mapfile) {
+                changeIframeSrc(`/thru/${mapfile}`);
+              }
+              fetchTableData('nodelist_xref');
+            });
+        }
+      });
+    });
 
     function updateDependentSelects(constants, options) {
     if (
